// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepresentativeSection Displays timezone when showTimezoneField is passed as prop 1`] = `
<RepresentativeSection
  appellantTitle="Veteran"
  formFieldsOnly={false}
  hearing={
    Object {
      "advanceOnDocketMotion": null,
      "aod": false,
      "appealExternalId": "0bf0263c-d863-4405-9b2e-f55cff77c6c4",
      "appealId": 613,
      "appellantAddressLine1": "9999 MISSION ST",
      "appellantCity": "SAN FRANCISCO",
      "appellantEmailAddress": "tom.brady@caseflow.gov",
      "appellantFirstName": "Tom",
      "appellantIsNotVeteran": false,
      "appellantLastName": "Brady",
      "appellantRelationship": "Spouse",
      "appellantState": "CA",
      "appellantTz": "America/Los_Angeles",
      "appellantZip": "94103",
      "availableHearingLocations": Object {},
      "bvaPoc": null,
      "caseType": "Original",
      "centralOfficeTimeString": "04:00",
      "claimantId": 604,
      "closestRegionalOffice": null,
      "conferenceProvider": "pexip",
      "currentIssueCount": 0,
      "disposition": null,
      "dispositionEditable": true,
      "docketName": "hearing",
      "docketNumber": "200624-614",
      "emailEvents": Array [],
      "evidenceWindowWaived": false,
      "externalId": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "hearingDayId": 11,
      "id": 10,
      "isVirtual": false,
      "judge": Object {
        "createdAt": "2020-06-25T11:00:43.257-04:00",
        "cssId": "BVAAABSHIRE",
        "displayName": "BVAAABSHIRE (VACO)",
        "efolderDocumentsFetchedAt": null,
        "email": null,
        "fullName": "Aaron Judge_HearingsAndCases Abshire",
        "id": 3,
        "lastLoginAt": null,
        "roles": Object {},
        "selectedRegionalOffice": null,
        "stationId": "101",
        "status": "active",
        "statusUpdatedAt": null,
        "updatedAt": "2020-06-25T11:00:43.257-04:00",
      },
      "judgeId": "3",
      "location": null,
      "militaryService": "",
      "notes": null,
      "paperCase": false,
      "poaName": "AMERICAN LEGION",
      "prepped": null,
      "readableLocation": null,
      "readableRequestType": "Video",
      "regionalOfficeKey": "RO17",
      "regionalOfficeName": "St. Petersburg regional office",
      "regionalOfficeTimezone": "America/New_York",
      "representative": "PARALYZED VETERANS OF AMERICA, INC.",
      "representativeAddress": Object {
        "addressLine1": "9999 MISSION ST",
        "city": "SAN FRANCISCO",
        "state": "CA",
        "zip": "94103",
      },
      "representativeEmailAddress": "tom.brady@caseflow.gov",
      "representativeName": null,
      "representativeTz": "America/Los_Angeles",
      "room": "1",
      "scheduledFor": "2020-07-06T06:00:00.000-04:00",
      "scheduledForIsPast": false,
      "scheduledTime": "2000-01-01T06:00:00.000-05:00",
      "scheduledTimeString": "06:00",
      "summary": null,
      "transcriptRequested": null,
      "transcription": Object {},
      "uuid": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "veteranAge": 85,
      "veteranEmailAddress": "John.Smith@test.com",
      "veteranFileNumber": "100000005",
      "veteranFirstName": "John",
      "veteranGender": "M",
      "veteranLastName": "Smith",
      "virtualHearing": null,
      "wasVirtual": false,
      "witness": null,
      "worksheetIssues": Object {},
    }
  }
  hearingDayDate="2025-01-01"
  schedulingToVirtual={true}
  showTimezoneField={true}
  type="change_to_virtual"
  update={[MockFunction]}
  virtualHearing={
    Object {
      "aliasWithHost": "BVA0000009@care.evn.va.gov",
      "appellantEmail": "Bob.Smith@test.com",
      "appellantTz": "America/Denver",
      "clientHost": "care.evn.va.gov",
      "conferenceProvider": "pexip",
      "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
      "guestPin": "2684353125#",
      "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
      "hostPin": "8600030#",
      "jobCompleted": true,
      "representativeEmail": "tom.brady@caseflow.gov",
      "representativeTz": "America/Los_Angeles",
      "requestCancelled": false,
      "scheduledInTimezone": "America/Chicago",
      "scheduledTimeString": "03:30",
      "status": "active",
    }
  }
>
  <VirtualHearingSection
    formFieldsOnly={false}
    hide={false}
    label="Power of Attorney (POA)"
    showDivider={true}
  >
    <pre>
      PARALYZED VETERANS OF AMERICA, INC.
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class=""
      >
        <div
          class="cf-form-dropdown dropdown-representativeTz"
          data-css-1dzedb9=""
        >
          <label
            class="question-label"
            for="representative-tz"
            id="representative-tz-label"
          >
            <strong>
              <span>
                POA/Representative Timezone
                <span
                  class="cf-optional"
                >
                  Optional
                </span>
              </span>
            </strong>
          </label>
          <div
            class="cf-select"
          >
            <div
              class=" css-2b097c-container"
            >
              <div
                className="cf-form-dropdown dropdown-representativeTz"
                data-css-1dzedb9=""
              >
                <div
                  class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                >
                  <div
                    class="cf-select__single-value css-1uccc91-singleValue"
                  >
                    Pacific Time (US & Canada) (3:00 AM)
                  </div>
                  <div
                    class="css-81nyic-Input"
                  >
                    <div
                      class="cf-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-labelledby="representative-tz-label"
                        aria-owns="representative-tz-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="representative-tz"
                        role="combobox"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="representativeTz"
                type="hidden"
                value="America/Los_Angeles"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="helper-text"
      >
        The hearing time in email notifications is calculated based on the timezone.
      </div>
    </div>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="POA/Representative Email (for these notifications only)"
        >
          <strong>
            <span>
              POA/Representative Email (for these notifications only)
              <span
                class="cf-optional"
              >
                Optional
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="POA/Representative Email (for these notifications only)"
            name="POA/Representative Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepresentativeSection Does not allow editing emails when read-only 1`] = `
<RepresentativeSection
  appellantTitle="Veteran"
  formFieldsOnly={false}
  hearing={
    Object {
      "advanceOnDocketMotion": null,
      "aod": false,
      "appealExternalId": "0bf0263c-d863-4405-9b2e-f55cff77c6c4",
      "appealId": 613,
      "appellantAddressLine1": "9999 MISSION ST",
      "appellantCity": "SAN FRANCISCO",
      "appellantEmailAddress": "tom.brady@caseflow.gov",
      "appellantFirstName": "Tom",
      "appellantIsNotVeteran": false,
      "appellantLastName": "Brady",
      "appellantRelationship": "Spouse",
      "appellantState": "CA",
      "appellantTz": "America/Los_Angeles",
      "appellantZip": "94103",
      "availableHearingLocations": Object {},
      "bvaPoc": null,
      "caseType": "Original",
      "centralOfficeTimeString": "04:00",
      "claimantId": 604,
      "closestRegionalOffice": null,
      "conferenceProvider": "pexip",
      "currentIssueCount": 0,
      "disposition": null,
      "dispositionEditable": true,
      "docketName": "hearing",
      "docketNumber": "200624-614",
      "emailEvents": Array [],
      "evidenceWindowWaived": false,
      "externalId": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "hearingDayId": 11,
      "id": 10,
      "isVirtual": false,
      "judge": Object {
        "createdAt": "2020-06-25T11:00:43.257-04:00",
        "cssId": "BVAAABSHIRE",
        "displayName": "BVAAABSHIRE (VACO)",
        "efolderDocumentsFetchedAt": null,
        "email": null,
        "fullName": "Aaron Judge_HearingsAndCases Abshire",
        "id": 3,
        "lastLoginAt": null,
        "roles": Object {},
        "selectedRegionalOffice": null,
        "stationId": "101",
        "status": "active",
        "statusUpdatedAt": null,
        "updatedAt": "2020-06-25T11:00:43.257-04:00",
      },
      "judgeId": "3",
      "location": null,
      "militaryService": "",
      "notes": null,
      "paperCase": false,
      "poaName": "AMERICAN LEGION",
      "prepped": null,
      "readableLocation": null,
      "readableRequestType": "Video",
      "regionalOfficeKey": "RO17",
      "regionalOfficeName": "St. Petersburg regional office",
      "regionalOfficeTimezone": "America/New_York",
      "representative": "PARALYZED VETERANS OF AMERICA, INC.",
      "representativeAddress": Object {
        "addressLine1": "9999 MISSION ST",
        "city": "SAN FRANCISCO",
        "state": "CA",
        "zip": "94103",
      },
      "representativeEmailAddress": "tom.brady@caseflow.gov",
      "representativeName": null,
      "representativeTz": "America/Los_Angeles",
      "room": "1",
      "scheduledFor": "2020-07-06T06:00:00.000-04:00",
      "scheduledForIsPast": false,
      "scheduledTime": "2000-01-01T06:00:00.000-05:00",
      "scheduledTimeString": "06:00",
      "summary": null,
      "transcriptRequested": null,
      "transcription": Object {},
      "uuid": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "veteranAge": 85,
      "veteranEmailAddress": "John.Smith@test.com",
      "veteranFileNumber": "100000005",
      "veteranFirstName": "John",
      "veteranGender": "M",
      "veteranLastName": "Smith",
      "virtualHearing": null,
      "wasVirtual": false,
      "witness": null,
      "worksheetIssues": Object {},
    }
  }
  hearingDayDate="2025-01-01"
  readOnly={true}
  schedulingToVirtual={true}
  type="change_to_virtual"
  update={[MockFunction]}
  virtualHearing={
    Object {
      "aliasWithHost": "BVA0000009@care.evn.va.gov",
      "appellantEmail": "Bob.Smith@test.com",
      "appellantTz": "America/Denver",
      "clientHost": "care.evn.va.gov",
      "conferenceProvider": "pexip",
      "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
      "guestPin": "2684353125#",
      "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
      "hostPin": "8600030#",
      "jobCompleted": true,
      "representativeEmail": "tom.brady@caseflow.gov",
      "representativeTz": "America/Los_Angeles",
      "requestCancelled": false,
      "scheduledInTimezone": "America/Chicago",
      "scheduledTimeString": "03:30",
      "status": "active",
    }
  }
>
  <VirtualHearingSection
    formFieldsOnly={false}
    hide={false}
    label="Power of Attorney (POA)"
    showDivider={true}
  >
    <pre>
      PARALYZED VETERANS OF AMERICA, INC.
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          POA/Representative Email (for these notifications only)
        </strong>
        <pre>
          None
        </pre>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepresentativeSection Does not display address when formFieldsOnly = true 1`] = `
<RepresentativeSection
  appellantTitle="Appellant"
  formFieldsOnly={true}
  hearing={
    Object {
      "advanceOnDocketMotion": null,
      "aod": false,
      "appealExternalId": "0bf0263c-d863-4405-9b2e-f55cff77c6c4",
      "appealId": 613,
      "appellantAddressLine1": "9999 MISSION ST",
      "appellantCity": "SAN FRANCISCO",
      "appellantEmailAddress": "tom.brady@caseflow.gov",
      "appellantFirstName": "Tom",
      "appellantIsNotVeteran": false,
      "appellantLastName": "Brady",
      "appellantRelationship": "Spouse",
      "appellantState": "CA",
      "appellantTz": "America/Los_Angeles",
      "appellantZip": "94103",
      "availableHearingLocations": Object {},
      "bvaPoc": null,
      "caseType": "Original",
      "centralOfficeTimeString": "04:00",
      "claimantId": 604,
      "closestRegionalOffice": null,
      "conferenceProvider": "pexip",
      "currentIssueCount": 0,
      "disposition": null,
      "dispositionEditable": true,
      "docketName": "hearing",
      "docketNumber": "200624-614",
      "emailEvents": Array [],
      "evidenceWindowWaived": false,
      "externalId": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "hearingDayId": 11,
      "id": 10,
      "isVirtual": false,
      "judge": Object {
        "createdAt": "2020-06-25T11:00:43.257-04:00",
        "cssId": "BVAAABSHIRE",
        "displayName": "BVAAABSHIRE (VACO)",
        "efolderDocumentsFetchedAt": null,
        "email": null,
        "fullName": "Aaron Judge_HearingsAndCases Abshire",
        "id": 3,
        "lastLoginAt": null,
        "roles": Object {},
        "selectedRegionalOffice": null,
        "stationId": "101",
        "status": "active",
        "statusUpdatedAt": null,
        "updatedAt": "2020-06-25T11:00:43.257-04:00",
      },
      "judgeId": "3",
      "location": null,
      "militaryService": "",
      "notes": null,
      "paperCase": false,
      "poaName": "AMERICAN LEGION",
      "prepped": null,
      "readableLocation": null,
      "readableRequestType": "Video",
      "regionalOfficeKey": "RO17",
      "regionalOfficeName": "St. Petersburg regional office",
      "regionalOfficeTimezone": "America/New_York",
      "representative": "PARALYZED VETERANS OF AMERICA, INC.",
      "representativeAddress": Object {
        "addressLine1": "9999 MISSION ST",
        "city": "SAN FRANCISCO",
        "state": "CA",
        "zip": "94103",
      },
      "representativeEmailAddress": "tom.brady@caseflow.gov",
      "representativeName": null,
      "representativeTz": "America/Los_Angeles",
      "room": "1",
      "scheduledFor": "2020-07-06T06:00:00.000-04:00",
      "scheduledForIsPast": false,
      "scheduledTime": "2000-01-01T06:00:00.000-05:00",
      "scheduledTimeString": "06:00",
      "summary": null,
      "transcriptRequested": null,
      "transcription": Object {},
      "uuid": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "veteranAge": 85,
      "veteranEmailAddress": "John.Smith@test.com",
      "veteranFileNumber": "100000005",
      "veteranFirstName": "John",
      "veteranGender": "M",
      "veteranLastName": "Smith",
      "virtualHearing": null,
      "wasVirtual": false,
      "witness": null,
      "worksheetIssues": Object {},
    }
  }
  hearingDayDate="2025-01-01"
  schedulingToVirtual={true}
  type="change_to_virtual"
  update={[MockFunction]}
  virtualHearing={
    Object {
      "aliasWithHost": "BVA0000009@care.evn.va.gov",
      "appellantEmail": "Bob.Smith@test.com",
      "appellantTz": "America/Denver",
      "clientHost": "care.evn.va.gov",
      "conferenceProvider": "pexip",
      "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
      "guestPin": "2684353125#",
      "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
      "hostPin": "8600030#",
      "jobCompleted": true,
      "representativeEmail": "tom.brady@caseflow.gov",
      "representativeTz": "America/Los_Angeles",
      "requestCancelled": false,
      "scheduledInTimezone": "America/Chicago",
      "scheduledTimeString": "03:30",
      "status": "active",
    }
  }
>
  <VirtualHearingSection
    formFieldsOnly={true}
    hide={false}
    label="Power of Attorney (POA)"
    showDivider={true}
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="POA/Representative Email (for these notifications only)"
        >
          <strong>
            <span>
              POA/Representative Email (for these notifications only)
              <span
                class="cf-optional"
              >
                Optional
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="POA/Representative Email (for these notifications only)"
            name="POA/Representative Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepresentativeSection Matches snapshot with default props 1`] = `
<RepresentativeSection
  appellantTitle="Veteran"
  formFieldsOnly={false}
  hearing={
    Object {
      "advanceOnDocketMotion": null,
      "aod": false,
      "appealExternalId": "0bf0263c-d863-4405-9b2e-f55cff77c6c4",
      "appealId": 613,
      "appellantAddressLine1": "9999 MISSION ST",
      "appellantCity": "SAN FRANCISCO",
      "appellantEmailAddress": "tom.brady@caseflow.gov",
      "appellantFirstName": "Tom",
      "appellantIsNotVeteran": false,
      "appellantLastName": "Brady",
      "appellantRelationship": "Spouse",
      "appellantState": "CA",
      "appellantTz": "America/Los_Angeles",
      "appellantZip": "94103",
      "availableHearingLocations": Object {},
      "bvaPoc": null,
      "caseType": "Original",
      "centralOfficeTimeString": "04:00",
      "claimantId": 604,
      "closestRegionalOffice": null,
      "conferenceProvider": "pexip",
      "currentIssueCount": 0,
      "disposition": null,
      "dispositionEditable": true,
      "docketName": "hearing",
      "docketNumber": "200624-614",
      "emailEvents": Array [],
      "evidenceWindowWaived": false,
      "externalId": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "hearingDayId": 11,
      "id": 10,
      "isVirtual": false,
      "judge": Object {
        "createdAt": "2020-06-25T11:00:43.257-04:00",
        "cssId": "BVAAABSHIRE",
        "displayName": "BVAAABSHIRE (VACO)",
        "efolderDocumentsFetchedAt": null,
        "email": null,
        "fullName": "Aaron Judge_HearingsAndCases Abshire",
        "id": 3,
        "lastLoginAt": null,
        "roles": Object {},
        "selectedRegionalOffice": null,
        "stationId": "101",
        "status": "active",
        "statusUpdatedAt": null,
        "updatedAt": "2020-06-25T11:00:43.257-04:00",
      },
      "judgeId": "3",
      "location": null,
      "militaryService": "",
      "notes": null,
      "paperCase": false,
      "poaName": "AMERICAN LEGION",
      "prepped": null,
      "readableLocation": null,
      "readableRequestType": "Video",
      "regionalOfficeKey": "RO17",
      "regionalOfficeName": "St. Petersburg regional office",
      "regionalOfficeTimezone": "America/New_York",
      "representative": "PARALYZED VETERANS OF AMERICA, INC.",
      "representativeAddress": Object {
        "addressLine1": "9999 MISSION ST",
        "city": "SAN FRANCISCO",
        "state": "CA",
        "zip": "94103",
      },
      "representativeEmailAddress": "tom.brady@caseflow.gov",
      "representativeName": null,
      "representativeTz": "America/Los_Angeles",
      "room": "1",
      "scheduledFor": "2020-07-06T06:00:00.000-04:00",
      "scheduledForIsPast": false,
      "scheduledTime": "2000-01-01T06:00:00.000-05:00",
      "scheduledTimeString": "06:00",
      "summary": null,
      "transcriptRequested": null,
      "transcription": Object {},
      "uuid": "61e7af7a-586c-446d-b8ee-a65be467e9e0",
      "veteranAge": 85,
      "veteranEmailAddress": "John.Smith@test.com",
      "veteranFileNumber": "100000005",
      "veteranFirstName": "John",
      "veteranGender": "M",
      "veteranLastName": "Smith",
      "virtualHearing": null,
      "wasVirtual": false,
      "witness": null,
      "worksheetIssues": Object {},
    }
  }
  hearingDayDate="2025-01-01"
  schedulingToVirtual={true}
  type="change_to_virtual"
  update={[MockFunction]}
  virtualHearing={
    Object {
      "aliasWithHost": "BVA0000009@care.evn.va.gov",
      "appellantEmail": "Bob.Smith@test.com",
      "appellantTz": "America/Denver",
      "clientHost": "care.evn.va.gov",
      "conferenceProvider": "pexip",
      "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
      "guestPin": "2684353125#",
      "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
      "hostPin": "8600030#",
      "jobCompleted": true,
      "representativeEmail": "tom.brady@caseflow.gov",
      "representativeTz": "America/Los_Angeles",
      "requestCancelled": false,
      "scheduledInTimezone": "America/Chicago",
      "scheduledTimeString": "03:30",
      "status": "active",
    }
  }
>
  <VirtualHearingSection
    formFieldsOnly={false}
    hide={false}
    label="Power of Attorney (POA)"
    showDivider={true}
  >
    <pre>
      PARALYZED VETERANS OF AMERICA, INC.
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="POA/Representative Email (for these notifications only)"
        >
          <strong>
            <span>
              POA/Representative Email (for these notifications only)
              <span
                class="cf-optional"
              >
                Optional
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="POA/Representative Email (for these notifications only)"
            name="POA/Representative Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepresentativeSection Shows Representative name when representative address blank 1`] = `
<RepresentativeSection
  appellantTitle="Veteran"
  formFieldsOnly={false}
  hearing={
    Object {
      "advanceOnDocketMotion": null,
      "aod": false,
      "appealExternalId": "005334f7-b5c6-490c-a310-7dc5db22c8c3",
      "appealId": 4,
      "appellantAddressLine1": "9999 MISSION ST",
      "appellantCity": "SAN FRANCISCO",
      "appellantEmailAddress": "tom.brady@caseflow.gov",
      "appellantFirstName": "Bob",
      "appellantIsNotVeteran": false,
      "appellantLastName": "Smith",
      "appellantState": "CA",
      "appellantTz": "America/Los_Angeles",
      "appellantZip": "94103",
      "availableHearingLocations": Object {},
      "bvaPoc": null,
      "caseType": "Original",
      "centralOfficeTimeString": "03:30",
      "claimantId": 4,
      "closestRegionalOffice": null,
      "conferenceProvider": "pexip",
      "currentIssueCount": 1,
      "disposition": null,
      "dispositionEditable": true,
      "docketName": "hearing",
      "docketNumber": "200628-4",
      "emailEvents": Array [
        Object {
          "emailAddress": "tom.brady@caseflow.gov",
          "emailType": "confirmation",
          "sentAt": "2020-06-29T14:55:12.620-04:00",
          "sentBy": "BVASYELLOW",
          "sentTo": "POA/Representative Email",
        },
        Object {
          "emailAddress": "Bob.Smith@test.com",
          "emailType": "confirmation",
          "sentAt": "2020-06-29T14:55:12.501-04:00",
          "sentBy": "BVASYELLOW",
          "sentTo": "Appellant Email",
        },
      ],
      "evidenceWindowWaived": false,
      "externalId": "9bb8e27e-9b89-48cd-8b0b-2e75cfa5627a",
      "hearingDayId": 4,
      "id": 4,
      "isVirtual": true,
      "judge": Object {
        "createdAt": "2020-06-25T11:00:43.257-04:00",
        "cssId": "BVAAABSHIRE",
        "displayName": "BVAAABSHIRE (VACO)",
        "efolderDocumentsFetchedAt": null,
        "email": null,
        "fullName": "Aaron Judge_HearingsAndCases Abshire",
        "id": 3,
        "lastLoginAt": null,
        "meetingType": "pexip",
        "roles": Object {},
        "selectedRegionalOffice": null,
        "stationId": "101",
        "status": "active",
        "statusUpdatedAt": null,
        "updatedAt": "2020-06-25T11:00:43.257-04:00",
      },
      "judgeId": 3,
      "location": null,
      "militaryService": "",
      "notes": null,
      "paperCase": false,
      "poaName": "AMERICAN LEGION",
      "prepped": null,
      "readableLocation": "Washington, DC",
      "readableRequestType": "Central",
      "regionalOfficeKey": "C",
      "regionalOfficeName": "Central",
      "regionalOfficeTimezone": "America/New_York",
      "representative": "Clarence Darrow",
      "representativeAddress": null,
      "representativeEmailAddress": "tom.brady@caseflow.gov",
      "representativeName": "PARALYZED VETERANS OF AMERICA, INC.",
      "representativeTz": "America/Denver",
      "room": "2",
      "scheduledFor": "2020-07-06T06:00:00.000-04:00",
      "scheduledForIsPast": false,
      "scheduledTime": "2000-01-01T03:30:00.000-05:00",
      "scheduledTimeString": "03:30",
      "summary": null,
      "transcriptRequested": null,
      "transcription": Object {},
      "uuid": "9bb8e27e-9b89-48cd-8b0b-2e75cfa5627a",
      "veteranAge": 85,
      "veteranEmailAddress": "Bob.Smith@test.com",
      "veteranFileNumber": "500000003",
      "veteranFirstName": "Bob",
      "veteranGender": "M",
      "veteranLastName": "Smith",
      "virtualHearing": Object {
        "aliasWithHost": "BVA0000009@care.evn.va.gov",
        "appellantEmail": "Bob.Smith@test.com",
        "appellantTz": "America/Denver",
        "clientHost": "care.evn.va.gov",
        "conferenceProvider": "pexip",
        "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
        "guestPin": "2684353125#",
        "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
        "hostPin": "8600030#",
        "jobCompleted": true,
        "representativeEmail": "tom.brady@caseflow.gov",
        "representativeTz": "America/Los_Angeles",
        "requestCancelled": false,
        "scheduledInTimezone": "America/Chicago",
        "scheduledTimeString": "03:30",
        "status": "active",
      },
      "wasVirtual": false,
      "witness": null,
      "worksheetIssues": Object {},
    }
  }
  hearingDayDate="2025-01-01"
  schedulingToVirtual={true}
  type="change_to_virtual"
  update={[MockFunction]}
  virtualHearing={
    Object {
      "aliasWithHost": "BVA0000009@care.evn.va.gov",
      "appellantEmail": "Bob.Smith@test.com",
      "appellantTz": "America/Denver",
      "clientHost": "care.evn.va.gov",
      "conferenceProvider": "pexip",
      "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
      "guestPin": "2684353125#",
      "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
      "hostPin": "8600030#",
      "jobCompleted": true,
      "representativeEmail": "tom.brady@caseflow.gov",
      "representativeTz": "America/Los_Angeles",
      "requestCancelled": false,
      "scheduledInTimezone": "America/Chicago",
      "scheduledTimeString": "03:30",
      "status": "active",
    }
  }
>
  <VirtualHearingSection
    formFieldsOnly={false}
    hide={false}
    label="Power of Attorney (POA)"
    showDivider={true}
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="POA/Representative Email (for these notifications only)"
        >
          <strong>
            <span>
              POA/Representative Email (for these notifications only)
              <span
                class="cf-optional"
              >
                Optional
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="POA/Representative Email (for these notifications only)"
            name="POA/Representative Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepresentativeSection Shows Representative not present message when no representative 1`] = `
<RepresentativeSection
  appellantTitle="Veteran"
  formFieldsOnly={false}
  hearing={
    Object {
      "advanceOnDocketMotion": null,
      "aod": false,
      "appealExternalId": "005334f7-b5c6-490c-a310-7dc5db22c8c3",
      "appealId": 4,
      "appellantAddressLine1": "9999 MISSION ST",
      "appellantCity": "SAN FRANCISCO",
      "appellantEmailAddress": "tom.brady@caseflow.gov",
      "appellantFirstName": "Bob",
      "appellantIsNotVeteran": false,
      "appellantLastName": "Smith",
      "appellantState": "CA",
      "appellantTz": "America/Los_Angeles",
      "appellantZip": "94103",
      "availableHearingLocations": Object {},
      "bvaPoc": null,
      "caseType": "Original",
      "centralOfficeTimeString": "03:30",
      "claimantId": 4,
      "closestRegionalOffice": null,
      "conferenceProvider": "pexip",
      "currentIssueCount": 1,
      "disposition": null,
      "dispositionEditable": true,
      "docketName": "hearing",
      "docketNumber": "200628-4",
      "emailEvents": Array [
        Object {
          "emailAddress": "tom.brady@caseflow.gov",
          "emailType": "confirmation",
          "sentAt": "2020-06-29T14:55:12.620-04:00",
          "sentBy": "BVASYELLOW",
          "sentTo": "POA/Representative Email",
        },
        Object {
          "emailAddress": "Bob.Smith@test.com",
          "emailType": "confirmation",
          "sentAt": "2020-06-29T14:55:12.501-04:00",
          "sentBy": "BVASYELLOW",
          "sentTo": "Appellant Email",
        },
      ],
      "evidenceWindowWaived": false,
      "externalId": "9bb8e27e-9b89-48cd-8b0b-2e75cfa5627a",
      "hearingDayId": 4,
      "id": 4,
      "isVirtual": true,
      "judge": Object {
        "createdAt": "2020-06-25T11:00:43.257-04:00",
        "cssId": "BVAAABSHIRE",
        "displayName": "BVAAABSHIRE (VACO)",
        "efolderDocumentsFetchedAt": null,
        "email": null,
        "fullName": "Aaron Judge_HearingsAndCases Abshire",
        "id": 3,
        "lastLoginAt": null,
        "meetingType": "pexip",
        "roles": Object {},
        "selectedRegionalOffice": null,
        "stationId": "101",
        "status": "active",
        "statusUpdatedAt": null,
        "updatedAt": "2020-06-25T11:00:43.257-04:00",
      },
      "judgeId": 3,
      "location": null,
      "militaryService": "",
      "notes": null,
      "paperCase": false,
      "poaName": "AMERICAN LEGION",
      "prepped": null,
      "readableLocation": "Washington, DC",
      "readableRequestType": "Central",
      "regionalOfficeKey": "C",
      "regionalOfficeName": "Central",
      "regionalOfficeTimezone": "America/New_York",
      "representative": null,
      "representativeEmailAddress": "tom.brady@caseflow.gov",
      "representativeName": "PARALYZED VETERANS OF AMERICA, INC.",
      "representativeTz": "America/Denver",
      "room": "2",
      "scheduledFor": "2020-07-06T06:00:00.000-04:00",
      "scheduledForIsPast": false,
      "scheduledTime": "2000-01-01T03:30:00.000-05:00",
      "scheduledTimeString": "03:30",
      "summary": null,
      "transcriptRequested": null,
      "transcription": Object {},
      "uuid": "9bb8e27e-9b89-48cd-8b0b-2e75cfa5627a",
      "veteranAge": 85,
      "veteranEmailAddress": "Bob.Smith@test.com",
      "veteranFileNumber": "500000003",
      "veteranFirstName": "Bob",
      "veteranGender": "M",
      "veteranLastName": "Smith",
      "virtualHearing": Object {
        "aliasWithHost": "BVA0000009@care.evn.va.gov",
        "appellantEmail": "Bob.Smith@test.com",
        "appellantTz": "America/Denver",
        "clientHost": "care.evn.va.gov",
        "conferenceProvider": "pexip",
        "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
        "guestPin": "2684353125#",
        "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
        "hostPin": "8600030#",
        "jobCompleted": true,
        "representativeEmail": "tom.brady@caseflow.gov",
        "representativeTz": "America/Los_Angeles",
        "requestCancelled": false,
        "scheduledInTimezone": "America/Chicago",
        "scheduledTimeString": "03:30",
        "status": "active",
      },
      "wasVirtual": false,
      "witness": null,
      "worksheetIssues": Object {},
    }
  }
  hearingDayDate="2025-01-01"
  schedulingToVirtual={true}
  type="change_to_virtual"
  update={[MockFunction]}
  virtualHearing={
    Object {
      "aliasWithHost": "BVA0000009@care.evn.va.gov",
      "appellantEmail": "Bob.Smith@test.com",
      "appellantTz": "America/Denver",
      "clientHost": "care.evn.va.gov",
      "conferenceProvider": "pexip",
      "guestLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=2684353125#&role=guest",
      "guestPin": "2684353125#",
      "hostLink": "https://care.evn.va.gov/bva-app/?join=1&media=&escalate=1&conference=BVA0000009@care.evn.va.gov&pin=8600030#&role=host",
      "hostPin": "8600030#",
      "jobCompleted": true,
      "representativeEmail": "tom.brady@caseflow.gov",
      "representativeTz": "America/Los_Angeles",
      "requestCancelled": false,
      "scheduledInTimezone": "America/Chicago",
      "scheduledTimeString": "03:30",
      "status": "active",
    }
  }
>
  <VirtualHearingSection
    formFieldsOnly={false}
    hide={false}
    label="Power of Attorney (POA)"
    showDivider={true}
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="POA/Representative Email (for these notifications only)"
        >
          <strong>
            <span>
              POA/Representative Email (for these notifications only)
              <span
                class="cf-optional"
              >
                Optional
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="POA/Representative Email (for these notifications only)"
            name="POA/Representative Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
